tests/tools/turndefs/routeSampler/errors/duplicate_locations/errors.tools
Edge '45' occurs more than once in interval 0.0-99.0
Edge '45' occurs more than once in interval 0.0-99.0
